[gd_scene load_steps=16 format=3 uid="uid://bsmko86yrq4tx"]

[ext_resource type="Texture2D" uid="uid://dd2do372akkjl" path="res://Assets/npc/Generic Male NPCs.png" id="1_6m4et"]
[ext_resource type="Script" path="res://Scripts/Npc/npc_male.gd" id="1_6mn64"]
[ext_resource type="Texture2D" uid="uid://bpmykfwj6ijbc" path="res://Assets/npc/free_character_1-3.png" id="3_2vhxf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oiyad"]
atlas = ExtResource("1_6m4et")
region = Rect2(80, 0, 80, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_x00ys"]
atlas = ExtResource("3_2vhxf")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jys7f"]
atlas = ExtResource("3_2vhxf")
region = Rect2(16, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lqm3"]
atlas = ExtResource("3_2vhxf")
region = Rect2(32, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqj1t"]
atlas = ExtResource("3_2vhxf")
region = Rect2(0, 40, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbm1s"]
atlas = ExtResource("3_2vhxf")
region = Rect2(16, 40, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy4p6"]
atlas = ExtResource("3_2vhxf")
region = Rect2(32, 40, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xem66"]
atlas = ExtResource("3_2vhxf")
region = Rect2(0, 60, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4huh"]
atlas = ExtResource("3_2vhxf")
region = Rect2(16, 60, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_psgh5"]
atlas = ExtResource("3_2vhxf")
region = Rect2(32, 60, 16, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xmui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiyad")
}],
"loop": true,
"name": &"iddle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x00ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jys7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lqm3")
}],
"loop": true,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqj1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbm1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy4p6")
}],
"loop": true,
"name": &"move_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xem66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4huh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psgh5")
}],
"loop": true,
"name": &"move_up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sml2d"]
radius = 3.0
height = 6.0

[node name="Npc_male" type="CharacterBody2D"]
script = ExtResource("1_6mn64")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_3xmui")
animation = &"move_up"

[node name="RayCast_Right" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, 7)
target_position = Vector2(20, 0)

[node name="RayCast_left" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, 7)
target_position = Vector2(-20, 0)

[node name="RayCast_Down" type="RayCast2D" parent="AnimatedSprite2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 7)
target_position = Vector2(0, 11)

[node name="RayCast_Up" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(0, 7)
target_position = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_sml2d")
